# SAUCIE

./: .gitignore  .gitmodules  README.md  csv-to-npy.ipynb  pyproject.toml  requirements.txt  streamlit_app.py  visualize_results.py
.github/workflows/: pytest.yml  test_versions.yml
divae_patch/: divae-0.2.0-py3-none-any.whl  setup.py  wheel.patch
docker/: base.Dockerfile  base_tf_test.Dockerfile  dep.Dockerfile  deploy.Dockerfile  pca.Dockerfile  poetry.Dockerfile  unittest.Dockerfile  unittest_deploy.Dockerfile
metrics/: dim_reduction.py  dunn.py
polyaxon/components/: streamlit.yml
polyaxon/jobs/: build_metrics.yml  divae.yml  divik.yml  filter.yml  hierarchical.yml  kmeans.yml  louvain.yml  pca.yml  saucie_batches.yml  saucie_metrics.yml  test_batches.yml  tsne.yml  umap.yml
saucie/: saucie.py  saucie_bn.py
streamlit_elements/: download_button.py  elements.py  figures.py  prepare_data.py  scores.py
test/: test_saucie.py  test_saucie_binaries.py
test/test_data/: batches.npy
