[tool.poetry]
name = "saucie"
version = "0.1.0"
description = ""
authors = ["amrukwa <a.mrukwa00@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<3.11"
numpy = "^1.23.4"
scikit-learn = "^1.1.3"
attrs = "^22.1.0"
astunparse = "1.6.3"
pandas = "^1.5.2"
tensorflow-gpu = "2.8.0"

[tool.poetry.dev-dependencies]
polyaxon = "^1.20.0"
networkx = "^2.8.8"
scikit-network = "^0.28.1"
umap-learn = "^0.5.3"
pytest = "^7.2.0"


[tool.poetry.group.deploy.dependencies]
streamlit = "^1.15.1"
plotly = "^5.11.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
